fix visibility of .header-menu

--- a/css/style.css
+++ b/css/style.css
@@ -124,10 +124,6 @@ body {
   align-items: center;
   flex-direction: row;
 
-  @media screen and (max-width: 1280px) {
-    flex-direction: column;
-    margin-top: 21px;
-  }
   @media screen and (max-width: 640px) {
     display: none;
 
